CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF(WIN32)
    # Build with static CRT
    STRING(REPLACE "/MD" "/MT" CMAKE_C_FLAGS_RELEASE ${CMAKE_CXX_FLAGS_RELEASE})
    STRING(REPLACE "/MDd" "/MTd" CMAKE_C_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG})
    STRING(REPLACE "/MD" "/MT" CMAKE_CXX_FLAGS_RELEASE ${CMAKE_CXX_FLAGS_RELEASE})
    STRING(REPLACE "/MDd" "/MTd" CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG})
ELSEIF(APPLE)
    #SET(CMAKE_OSX_ARCHITECTURES ppc;i386 CACHE STRING "OSX architectures" FORCE)
    #SET(CMAKE_OSX_SYSROOT /Developer/SDKs/MacOSX10.5.sdk CACHE STRING "OSX sysroot" FORCE)
    SET(CMAKE_OSX_ARCHITECTURES i386 CACHE STRING "OSX architectures" FORCE)
    SET(CMAKE_OSX_SYSROOT /Developer/SDKs/MacOSX10.5.sdk CACHE STRING "OSX sysroot" FORCE)
ENDIF(WIN32)

SET(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "limited configs" FORCE)

ADD_SUBDIRECTORY(plugin/iulib)
ADD_SUBDIRECTORY(plugin)
