# Plugin
SET(SRCS
	plugin.h
    plugin_dll.cc
    plugin_dll.def)

IF(WIN32)
    ADD_LIBRARY(wavein SHARED ${SRCS})
    ADD_DEPENDENCIES(wavein iulib)
    TARGET_LINK_LIBRARIES(wavein iulib winmm)
    INSTALL(TARGETS wavein DESTINATION ${CMAKE_SOURCE_DIR}/unity3d/Assets/Plugins)
ELSEIF(APPLE)
    FIND_LIBRARY(COREFOUNDATION_FRAMEWORK CoreFoundation)
    FIND_LIBRARY(AUDIOTOOLBOX_FRAMEWORK AudioToolbox)
    
    ADD_LIBRARY(wavein MODULE ${SRCS})
    ADD_DEPENDENCIES(wavein iulib)
    SET_TARGET_PROPERTIES(wavein PROPERTIES OUTPUT_NAME wavein PREFIX "" SUFFIX "")
    TARGET_LINK_LIBRARIES(wavein iulib ${AUDIOTOOLBOX_FRAMEWORK} ${COREFOUNDATION_FRAMEWORK})

    GET_TARGET_PROPERTY(PLUGIN_OUTPUT_PATH wavein LOCATION)
    ADD_CUSTOM_COMMAND(TARGET wavein POST_BUILD COMMAND mkdir -p ${PLUGIN_OUTPUT_PATH}.bundle/Contents/MacOS ${PLUGIN_OUTPUT_PATH}.bundle/Contents/Resources/English.lproj)
    ADD_CUSTOM_COMMAND(TARGET wavein POST_BUILD COMMAND cp ${PLUGIN_OUTPUT_PATH} ${PLUGIN_OUTPUT_PATH}.bundle/Contents/MacOS)
    ADD_CUSTOM_COMMAND(TARGET wavein POST_BUILD COMMAND cp -R ${PLUGIN_OUTPUT_PATH}.bundle ${CMAKE_SOURCE_DIR}/unity3d/Assets/Plugins)
ENDIF(WIN32)
